--- a/gradle.properties
+++ b/gradle.properties
@@ -4,5 +4,5 @@ GRADLE_VERSION=5.4.1
 
 # Changeable? - Yes
 ## Default properties used when publishing overall artifact
-PRODUCT_GROUP=com.polyforest.acornui.build
+PRODUCT_GROUP=com.polyforest
 PRODUCT_VERSION=1.0.0-SNAPSHOT
