--- a/consumer/gradle.properties
+++ b/consumer/gradle.properties
@@ -8,6 +8,7 @@ ACORNUI_PLUGIN_VERSION=1.0.0-SNAPSHOT
 # Changeable? - Yes
 ## Default properties used when publishing all artifacts (can be overridden for any artifact/project)
 PRODUCT_GROUP=com.polyforest.acornui.build.samples
+PRODUCT_VERSION=1.0.0-SNAPSHOT
 ## Target Acorn UI version to use when building off of published artifacts (local or remote)
 ACORNUI_VERSION=0.0.1
 USE_BASIC_ASSETS=true
