--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,6 @@ GRADLE_VERSION=5.4.1
 ## Default properties used when publishing overall artifact
 PRODUCT_GROUP=com.polyforest
 PRODUCT_VERSION=1.0.0-SNAPSHOT
+KOTLIN_VERSION=1.3.21
+KOTLIN_LANGUAGE_VERSION=1.3
+KOTLIN_JVM_TARGET=1.8
