--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,5 @@ PRODUCT_VERSION=1.0.0-SNAPSHOT
 KOTLIN_VERSION=1.3.21
 KOTLIN_LANGUAGE_VERSION=1.3
 KOTLIN_JVM_TARGET=1.8
+DOKKA_VERSION=0.9.18
+JDK_DOCUMENTATION_LINK_VERSION=11
