--- a/acornui-plugins/gradle.properties
+++ b/acornui-plugins/gradle.properties
@@ -1,7 +1,7 @@
 group=com.acornui.plugins
-version=0.1.1-SNAPSHOT
-acornConfigPluginsVersion=0.1.1-SNAPSHOT
+version=0.1.2
+acornConfigPluginsVersion=0.1.1
 kotlinVersion=1.3.31
-acornVersion=0.1.1-SNAPSHOT
+acornVersion=0.1.1
 
 kotlin.code.style=official
