--- a/acornui-plugins/gradle.properties
+++ b/acornui-plugins/gradle.properties
@@ -2,6 +2,6 @@ group=com.acornui.plugins
 version=0.1.5
 acornConfigPluginsVersion=0.1.1
 kotlinVersion=1.3.31
-acornVersion=0.1.2
+acornVersion=0.1.3-SNAPSHOT
 
 kotlin.code.style=official
